--- a/.classpath
+++ b/.classpath
@@ -1,15 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk6"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/aopalliance-1.0.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/commons-beanutils-1.8.3.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/commons-codec-1.9.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/commons-lang3-3.0.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/commons-logging-1.1.3.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/cxf-bundle-jaxrs-2.7.11.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/dozer-5.5.1.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/ehcache-core-2.5.0.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/geronimo-javamail_1.4_spec-1.7.1.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/geronimo-servlet_3.0_spec-1.0.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/guava-17.0.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jackson-annotations-2.4.0.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jackson-core-2.4.1.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jackson-databind-2.4.1.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jackson-jaxrs-base-2.4.1.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jackson-jaxrs-json-provider-2.4.1.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jackson-module-jaxb-annotations-2.4.1.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/javax.ws.rs-api-2.0-m10.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jaxb-impl-2.1.13.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jaxrs-api-3.0.8.Final.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jcl-over-slf4j-1.7.5.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jetty-continuation-8.1.14.v20131031.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jetty-http-8.1.14.v20131031.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jetty-io-8.1.14.v20131031.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jetty-security-8.1.14.v20131031.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jetty-server-8.1.14.v20131031.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jetty-util-8.1.14.v20131031.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/junit-4.11.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/shiro-core-1.2.3.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/shiro-ehcache-1.2.3.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/shiro-spring-1.2.3.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/shiro-web-1.2.3.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/slf4j-api-1.7.7.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/spring-aop-4.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/spring-beans-4.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/spring-context-4.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/spring-context-support-4.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/spring-core-4.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/spring-expression-4.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/spring-web-4.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/stax2-api-3.1.4.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/woodstox-core-asl-4.2.1.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/wsdl4j-1.6.3.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/xmlschema-core-2.1.0.jar"/>
 	<classpathentry kind="output" path="webapp/WEB-INF/classes"/>
 </classpath>
